# HAL-9000

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  bot.py  config.py  conversation.py  instrumentation.py  pyproject.toml  pytest.ini  tools.py  utils.py
docs/plans/: 20250114-180390-conversation-plan.md  20251203-170936-discord-bot-implementation.md
tests/: test_agent.py  test_bot.py  test_config.py  test_conversation.py  test_instrumentation.py  test_integration_instrumentation.py  test_recent_context.py  test_tools.py  test_utils.py
