[project]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Jon Whiteaker",email = "jbw@berkeley.edu"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "discord-py (>=2.6.4,<3.0.0)",
    "pydantic-ai (>=1.26.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
