[project]
name = "hal-9000"
version = "0.0.1"
description = ""
authors = [
    {name = "Jon Whiteaker",email = "jbw@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "discord-py (>=2.6.4,<3.0.0)",
    "pydantic-ai (>=1.27.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
